--- a/index.fld/tabstrip.htm
+++ b/index.fld/tabstrip.htm
@@ -3,7 +3,7 @@
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
-<link id=Main-File rel=Main-File href="../attendance-record.htm">
+<link id=Main-File rel=Main-File href="../index.htm">
 
 <script language="JavaScript">
 <!--
@@ -24,7 +24,8 @@ A {
 <body topmargin=0 leftmargin=0 bgcolor="#808080">
 <table border=0 cellspacing=1>
  <tr>
- <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet001.htm" target="frSheet"><font face="Arial" color="#000000">AttendanceRecord</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet001.htm" target="frSheet"><font face="Arial" color="#000000">Осень 2024</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet002.htm" target="frSheet"><font face="Arial" color="#000000">Зима 2024-2025</font></a>&nbsp;</small></small></b></td>
 
  </tr>
 </table>
