--- a/index.fld/sheet001.htm
+++ b/index.fld/sheet001.htm
@@ -54,10 +54,8 @@ else
  width:24pt'>
  <col class=xl66 width=176 style='mso-width-source:userset;mso-width-alt:5632;
  width:132pt'>
- <col class=xl66 width=103 span=7 style='mso-width-source:userset;mso-width-alt:
+ <col class=xl66 width=103 span=8 style='mso-width-source:userset;mso-width-alt:
  3285;width:77pt'>
- <col class=xl66 width=103 style='mso-width-source:userset;mso-width-alt:3285;
- width:77pt'>
  <col class=xl66 width=37 style='mso-width-source:userset;mso-width-alt:1194;
  width:28pt'>
  <col class=xl66 width=56 style='mso-width-source:userset;mso-width-alt:1792;
@@ -68,7 +66,7 @@ else
  width:132pt'>
  <tr class=xl66 height=33 style='mso-height-source:userset;height:25.0pt'>
   <td height=33 class=xl76 colspan=3 width=311 style='height:25.0pt;mso-ignore:
-  colspan;width:233pt'><a name="Print_Area">Подростковая домашка</a></td>
+  colspan;width:233pt'>Подростковая домашка</td>
   <td class=xl69 width=103 style='width:77pt'></td>
   <td class=xl69 width=103 style='width:77pt'></td>
   <td class=xl70 width=103 style='width:77pt'></td>
