--- a/index.fld/sheet002.htm
+++ b/index.fld/sheet002.htm
@@ -9,14 +9,6 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=Generator content="Microsoft Excel 15">
 <link id=Main-File rel=Main-File href="../index.htm">
 <link rel=File-List href=filelist.xml>
-<!--[if !mso]>
-<style>
-v\:* {behavior:url(#default#VML);}
-o\:* {behavior:url(#default#VML);}
-x\:* {behavior:url(#default#VML);}
-.shape {behavior:url(#default#VML);}
-</style>
-<![endif]-->
 <title>Attendance Record Template</title>
 <link rel=Stylesheet href=stylesheet.css>
 <style>
@@ -62,11 +54,7 @@ else
  width:24pt'>
  <col class=xl66 width=176 style='mso-width-source:userset;mso-width-alt:5632;
  width:132pt'>
- <col class=xl66 width=103 span=7 style='mso-width-source:userset;mso-width-alt:
- 3285;width:77pt'>
- <col class=xl66 width=103 style='mso-width-source:userset;mso-width-alt:3285;
- width:77pt'>
- <col class=xl66 width=103 span=5 style='mso-width-source:userset;mso-width-alt:
+ <col class=xl66 width=103 span=13 style='mso-width-source:userset;mso-width-alt:
  3285;width:77pt'>
  <col class=xl66 width=37 style='mso-width-source:userset;mso-width-alt:1194;
  width:28pt'>
@@ -78,7 +66,7 @@ else
  width:132pt'>
  <tr class=xl66 height=33 style='mso-height-source:userset;height:25.0pt'>
   <td height=33 class=xl76 colspan=3 width=311 style='height:25.0pt;mso-ignore:
-  colspan;width:233pt'><a name="Print_Area">Подростковая домашка</a></td>
+  colspan;width:233pt'>Подростковая домашка</td>
   <td class=xl69 width=103 style='width:77pt'></td>
   <td class=xl69 width=103 style='width:77pt'></td>
   <td class=xl70 width=103 style='width:77pt'></td>
@@ -173,8 +161,8 @@ else
   <td class=xl91 width=103 style='border-left:none;width:77pt'>Тема: Отменена</td>
   <td class=xl91 width=103 style='border-left:none;width:77pt'>Тема: Сеющий в
   плоть</td>
-  <td class=xl91 width=103 style='border-left:none;width:77pt'>Тема:<span
-  style='mso-spacerun:yes'> </span></td>
+  <td class=xl91 width=103 style='border-left:none;width:77pt'>Тема: На пути в
+  Дамаск</td>
   <td class=xl91 width=103 style='border-left:none;width:77pt'>Тема:<span
   style='mso-spacerun:yes'> </span></td>
   <td class=xl91 width=103 style='border-left:none;width:77pt'>Тема:<span
@@ -221,14 +209,14 @@ else
   <td class=xl82 style='border-top:none;border-left:none'>x</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>x</td>
+  <td class=xl82 style='border-top:none;border-left:none'>x</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl85 style='border-left:none'>5</td>
-  <td class=xl86 align=right style='border-left:none'>38,5%</td>
+  <td class=xl85 style='border-left:none'>6</td>
+  <td class=xl86 align=right style='border-left:none'>46,2%</td>
   <td class=xl77></td>
   <td class=xl77></td>
  </tr>
@@ -242,14 +230,14 @@ else
   <td class=xl82 style='border-top:none;border-left:none'>x</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>x</td>
+  <td class=xl82 style='border-top:none;border-left:none'>x</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl85 style='border-top:none;border-left:none'>3</td>
-  <td class=xl86 align=right style='border-top:none;border-left:none'>23,1%</td>
+  <td class=xl85 style='border-top:none;border-left:none'>4</td>
+  <td class=xl86 align=right style='border-top:none;border-left:none'>30,8%</td>
   <td class=xl77></td>
   <td class=xl77></td>
  </tr>
@@ -263,14 +251,14 @@ else
   <td class=xl82 style='border-top:none;border-left:none'>x</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>x</td>
+  <td class=xl82 style='border-top:none;border-left:none'>x</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl85 style='border-top:none;border-left:none'>3</td>
-  <td class=xl86 align=right style='border-top:none;border-left:none'>23,1%</td>
+  <td class=xl85 style='border-top:none;border-left:none'>4</td>
+  <td class=xl86 align=right style='border-top:none;border-left:none'>30,8%</td>
   <td class=xl77></td>
   <td class=xl77></td>
  </tr>
@@ -284,14 +272,14 @@ else
   <td class=xl82 style='border-top:none;border-left:none'>x</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>x</td>
+  <td class=xl82 style='border-top:none;border-left:none'>x</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl85 style='border-top:none;border-left:none'>5</td>
-  <td class=xl86 align=right style='border-top:none;border-left:none'>38,5%</td>
+  <td class=xl85 style='border-top:none;border-left:none'>6</td>
+  <td class=xl86 align=right style='border-top:none;border-left:none'>46,2%</td>
   <td class=xl77></td>
   <td class=xl77></td>
  </tr>
@@ -326,14 +314,14 @@ else
   <td class=xl82 style='border-top:none;border-left:none'>x</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>x</td>
+  <td class=xl82 style='border-top:none;border-left:none'>x</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl85 style='border-top:none;border-left:none'>4</td>
-  <td class=xl86 align=right style='border-top:none;border-left:none'>30,8%</td>
+  <td class=xl85 style='border-top:none;border-left:none'>5</td>
+  <td class=xl86 align=right style='border-top:none;border-left:none'>38,5%</td>
   <td class=xl77></td>
   <td class=xl77></td>
  </tr>
@@ -347,14 +335,14 @@ else
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>x</td>
+  <td class=xl82 style='border-top:none;border-left:none'>x</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl82 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl85 style='border-top:none;border-left:none'>4</td>
-  <td class=xl86 align=right style='border-top:none;border-left:none'>30,8%</td>
+  <td class=xl85 style='border-top:none;border-left:none'>5</td>
+  <td class=xl86 align=right style='border-top:none;border-left:none'>38,5%</td>
   <td class=xl77></td>
   <td class=xl77></td>
  </tr>
@@ -536,7 +524,7 @@ else
   <td class=xl79>6</td>
   <td class=xl79>0</td>
   <td class=xl79>6</td>
-  <td class=xl79>0</td>
+  <td class=xl79>6</td>
   <td class=xl79>0</td>
   <td class=xl79>0</td>
   <td class=xl79>0</td>
